Create SES mail provider

--- a/src/modules/accounts/views/forgotPassword.hbs
+++ b/src/modules/accounts/views/forgotPassword.hbs
@@ -1,18 +1,32 @@
-<style>
-  .container{ width: 800px; font-family: Arial, Helvetica, sans-serif; display:
-  flex; align-items: center; flex-direction: column; } span { margin: 10px; }
-</style>
+<html>
+  <head>
+    <style>
+      .container{ 
+        width: 800px; 
+        font-family: Arial, Helvetica, sans-serif;
+      } 
 
-<div class="container">
-  <span>Oi, {{name}}</span>
-  <br />
-  <span>Voce solicitou alteração de senha.</span>
-  <span>
-    Para realizar a troca, clique no link
-    <a href={{link}}>{{link}}</a>
-  </span>
+      span {
+        margin: 10px 0; 
+        display: block;
+      }
+    </style>
 
-  <span>
-    Caso não tenha sido você que solicitou a troca de senha, igonore este email.
-  </span>
-</div>
+  </head>
+  <body>
+    <div class="container">
+      <span>Oi, {{name}}</span>
+      <br />
+      <span>Voce solicitou alteração de senha.</span>
+      <span>
+        Para realizar a troca, clique no link
+        <a href={{link}}>{{link}}</a>
+      </span>
+
+      <span>
+        Caso não tenha sido você que solicitou a troca de senha, igonore este
+        email.
+      </span>
+    </div>
+  </body>
+</html>
